--- a/Titanic_Pitch/index.Rmd
+++ b/Titanic_Pitch/index.Rmd
@@ -4,9 +4,9 @@ subtitle    : A Course Project
 author      : Diego Gaona
 job         : Data Science Coursera - Developing Data Products
 framework   : revealjs        # {io2012, html5slides, shower, dzslides, revealjs ...}
-revealjs    : {transition: fade, center: "true"} # none/fade/slide/convex/concave/zoom} 
+revealjs    : {transition: fade, center: "false"} # none/fade/slide/convex/concave/zoom} 
 highlighter : highlight.js  # {highlight.js, prettify, highlight}
-hitheme     : beige # Sky - Beige - Simple - Serif - Night - Default - Solarized - Moon
+hitheme     : moon # Sky - Beige - Simple - Serif - Night - Default - Solarized - Moon
 widgets     : []            # {mathjax, quiz, bootstrap}
 ext_widgets : {rCharts: libraries/nvd3}
 mode        : selfcontained # {standalone, draft, selfcontained}
@@ -19,37 +19,73 @@ options(
   rcharts.mode = 'iframesrc', 
   rcharts.cdn = TRUE,
   RCHART_WIDTH = 960,
-  RCHART_HEIGHT = 450)
+  RCHART_HEIGHT = 650)
 require(knitr)
-
-# all_data <- read.csv("complete_data.csv", sep = ";")
+## LOADING THE DATA:
+plot_data <- read.csv("plot_data.csv")
+levels(plot_data$Embarked) <- c("Cherbourg","Queenstown","Southampton")
+plot_data$Survived <- as.factor(plot_data$Survived)
+plot_data$family_size <- as.factor(plot_data$family_size)
+plot_data$Title <- as.factor(plot_data$Title)
+plot_data$Pclass <- as.factor(plot_data$Pclass)
+plot_data$Age <- as.integer(plot_data$Age)
+levels(plot_data$Sex) <- c("Female","Male")
+levels(plot_data$Survived) <- c("Casualty","Survived")
+levels(plot_data$Pclass) <- c("1st","2nd","3rd")
+colnames(plot_data) <- c("Life", "Ticket_Class", "Gender", "Age", "Ticket_Fare", "Port_of_Embarkation", "Number_of_Family_Members_Aboard", "Title")
 ```
 
 ## Titanic Survival Probabilities
+<div style="text-align: center;align=center">
+<p>A Course Project for Developing Data Products<br>
+From Coursera and Johns Hopkins University</p><br><br><br>
+</div>
+<h3>Creator</h3>
+<h2><a href="https://linkedin.com/in/diegocgaona">Diego Gaona</a></h2>
 
-A Course Project for Developing Data Products  
-From Coursera  
+--- .class #intro 
 
+## Introduction
+<div style="text-align: left;">
+<p>The sinking of the RMS Titanic is one of the most infamous shipwrecks in history. </p><br>
+<p>On April 15, 1912, during her maiden voyage, the Titanic sank after colliding with an iceberg, killing 1502 out of 2224 passengers and crew.</p><br>
+<p>This sensational tragedy shocked the international community and led to better safety regulations for ships.</p>
 
---- .class #plot1 
+</div>
 
-## Slide 2
-<p>The sinking of the RMS Titanic is one of the most infamous shipwrecks in history.  On April 15, 1912, during her maiden voyage, the Titanic sank after colliding with an iceberg, killing 1502 out of 2224 passengers and crew. This sensational tragedy shocked the international community and led to better safety regulations for ships.</p>
+--- .class #plot1
 
-
+## Exploration
+<div style="text-align: left;">
+In this plot we see the deaths related to age and ticket fare, some of the variable which infuenced the chance of surviving. 
+</div>
 <div style="background:#cccccc;">
 ```{r plot, results = "asis", message=FALSE, echo = FALSE} 
-n1 <- nPlot(mpg ~ wt, group = 'cyl', data = mtcars, type = 'scatterChart')
-n1$xAxis(axisLabel = 'Weight')
+n1 <- nPlot(Ticket_Fare ~ Age, group = 'Life', data = plot_data, type = 'scatterChart')
+n1$xAxis(axisLabel = 'Age')
+n1$yAxis(axisLabel = 'Ticket Fare')
+#n1$addControls("group", value = "Life", values = names(plot_data[,c(1,2,3,6,7,8)]))
 n1$show('inline', include_assets = TRUE, cdn = TRUE)
 ```  
 </div>
 
---- .class #plot2
+--- .class #challenge
 
-## Slide 3
+## The challenge
+<div style="text-align: left;">
+<p>My challenge, is to do a analysis of what sorts of people were likely to survive. Using machine learning models to predict how much chance each type of passanger has to survive.</p><br>
 
+<p>This work is based on Kaggle Titanic: Machine Learning from Disaster competition and The Kaggle R Tutorial on Machine Learning from DataCamp</p>
+</div>
 
-```{r plot2, results = "asis", , echo = F} 
+--- .class #app
 
-```
+## The Shiny App
+<div style="text-align: left;">
+<p>To show how this works, I made a App, running on Shinyapp.io servers, is very easy to use and you can try to change the variables and see the results.</p><br>
+
+<p>Who have more chances to surive?</p>
+
+<p>Try the app on: <a href="https://diegogaona.shinyapps.io/titanic_project">Titanic Project App</a></p>
+</div>
+!['Shiny App']("img/print.jpg")
